[package]
name = "ch569-pac"
version = "0.1.0"
authors = [
    "Matt Thompson <matt@boondocker.io>"
]
edition = "2021"

description  = "PAC for CH569 microcontrollers"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/boondockenergy/ch569-pac.git"

[dependencies]
critical-section = { version = "1.1", optional = false }
riscv = "0.9.0"
riscv-rt = { version = "0.9.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt"]
critical-section = []

